SCA-16 fix content aligment on mobile

--- a/frontend/src/components/InputData/InputData.css
+++ b/frontend/src/components/InputData/InputData.css
@@ -115,6 +115,10 @@
     height: 1.2rem;
 }
 
+.input-holder{
+    width: 100%;
+}
+
 @media screen and (max-width: 569px) {
     .form-flex-row {
         flex-flow: column nowrap;
